--- a/disclaimer.html
+++ b/disclaimer.html
@@ -49,7 +49,7 @@
     <div class="container">
         <h1>mostbet.streetskate.xyz | Sorumluluk reddi beyanı</h1>
         <p>Daha fazla bilgiye ihtiyacınız varsa veya sitemizin sorumluluk reddi beyanı hakkında sorularınız varsa,
-            lütfen info@carforestracing.click adresinden e-posta yoluyla bizimle iletişime geçin.</p>
+            lütfen info@streetskate.xyz adresinden e-posta yoluyla bizimle iletişime geçin.</p>
         Bu web sitesindeki tüm bilgiler - - Web sitesi iyi niyetle ve yalnızca genel bilgilendirme amacıyla
         yayınlanmaktadır. bu bilgilerin eksiksizliği, güvenilirliği veya doğruluğu konusunda hiçbir garanti vermez. Web
         Sitesi Bu web sitesinde bulduğunuz bilgilere ilişkin yapacağınız her türlü eylemin riski kesinlikle size aittir.
@@ -172,33 +172,8 @@
             },
             {
                 "@type": "WebPage",
-                "name": "about",
-                "url": "/about.html"
-            },
-            {
-                "@type": "WebPage",
-                "name": "career",
-                "url": "/career.html"
-            },
-            {
-                "@type": "WebPage",
-                "name": "news",
-                "url": "/news.html"
-            },
-            {
-                "@type": "WebPage",
-                "name": "portfolio",
-                "url": "/portfolio.html"
-            },
-            {
-                "@type": "WebPage",
                 "name": "review",
                 "url": "/review.html"
-            },
-            {
-                "@type": "WebPage",
-                "name": "team",
-                "url": "/team.html"
             }
         ]
     }
